# vote-bot

./: .gitignore  README.md  pyproject.toml
.run_without_installation/: testInteractiveVoteBot.py  testVoteBot.py
src/vote_bot/: __init__.py  actions.py  deadline_poll.py  people_pool.py  person.py  poll.py  scenario.py  sqlite_action_logger.py  vote_context.py
src/vote_bot/bot/: matrix_bot.py  vote_bot.py
src/vote_bot/console/: interactive_run.py
src/vote_bot/log/: log_compare.py  vote_logger.py
src/vote_bot/vote_logic/: actions.py  poll.py  pollOption.py  time_events.py  vote_context.py
src/vote_bot/websocket/: websocket_server.py
temp/: .gitignore
test/: testInteractiveVoteSystem.py  testVoteBot.py  testVoteSystem.py
tests/: test_core.py
